istio-03-igw-affinity/session.yaml
apiVersion: v1
kind: Service
metadata:
  name: session-svc
spec:
  selector:
    app: session
  ports:
    - name: http  
      port: 9080
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: session-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: session
  template:
    metadata:
      labels:
        app: session
    spec:
      containers:
        - image: 'maho/session-test:1.1'
          name: session
          ports:
            - containerPort: 80
