istio-03-igw-affinity/session-affinity.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: session
spec:
  host: session-svc
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpCookie:
          name: PHPSESSID
          ttl: 0s
