istio-03-igw-affinity/session-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: session-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: session
spec:
  hosts:
  - "*"
  gateways:
  - session-gateway
  http:
  - match:
     - uri:
        prefix: "/user"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: session-svc
        port:
          number: 9080
